--- a/files/nginx.j2
+++ b/files/nginx.j2
@@ -18,8 +18,7 @@ server {
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
- 	root /var/www/html;
-
+ 	    root /var/www/html;
         index index.html index.htm index.nginx-debian.html;
 
         server_name _;
@@ -32,7 +31,7 @@ server {
         listen 80;
 
 
-        root /home/phpsite;
+        root /var/www/html/php;
 
         index index.php index.html index.htm index.nginx-debian.html;
 
